--- a/css/test-style.css
+++ b/css/test-style.css
@@ -216,9 +216,11 @@ nav {
     margin: 2px 10px;
     border-radius: 50%;  
     text-decoration: none;
+    border: 1px solid black;
 }
 .social-icon i{
     color: #000000;
+   
 }
 .social-icon a:hover{
     background-color: #000000;
